--- a/site/app.css
+++ b/site/app.css
@@ -22,6 +22,13 @@
     border-bottom: 6px solid white;
 }
 
+.pokemon a:link,
+.pokemon a:visited,
+.pokemon a:active {
+    text-decoration: none;
+    color: black;
+}
+
 h1 a:link {
     text-decoration: none;
     color: yellow;
@@ -50,6 +57,8 @@ h1 {
 
 body {
     background-color: hsl(0, 100%, 50%);
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
 body h2 {
