--- a/site/app.css
+++ b/site/app.css
@@ -121,3 +121,12 @@ body h2 {
     font-size: 20px;
     margin-bottom: 10px;
 }
+
+.spinner {
+    width: 150px;
+    margin-left: 45%;
+}
+
+.hidden {
+    display: none;
+}
